fix missing scrollbars (Firefox) delay autoplay during loading

--- a/src/css/spotlight.less
+++ b/src/css/spotlight.less
@@ -323,11 +323,12 @@
 }
 
 .hide-scrollbars{
-  &::-webkit-scrollbar {
-    width: 0;
-  }
-  overflow: -moz-hidden-unscrollable;
-  -ms-overflow-style: none;
+  //&::-webkit-scrollbar {
+  //  width: 0;
+  //}
+  //overflow: -moz-hidden-unscrollable;
+  //-ms-overflow-style: none;
+  overflow: hidden;
 }
 
 @keyframes pulsate {
